# taichi

./: .gitignore  requirements_dev.txt  start.sh
c_api/include/taichi/: taichi_core.h
c_api/python/taichi_runtime/: impl.py
c_api/src/: taichi_core_impl.cpp
cmake/: TaichiCore.cmake
codon/: _logging.codon  _snode.codon  demo.codon  impl.codon  lib.codon  path.codon  taichi  taichi.codon  taichi_core.codon  taichi_cpu.codon  taichi_cuda.codon  taichi_metal.codon  taichi_opengl.codon  taichi_vulkan.codon  types.codon
python/taichi/lang/: _ndarray.py  kernel_impl.py  misc.py  source_builder.py
python/taichi/linalg/: sparse_cg.py  sparse_matrix.py  sparse_solver.py
taichi/analysis/: mesh_bls_analyzer.cpp
taichi/codegen/cuda/: CMakeLists.txt
taichi/codegen/cuda_c/: codegen_cuda_c.cpp  codegen_cuda_c.h  cuda_c_compiled_data.h  cuda_c_kernel_compiler.cpp  cuda_c_kernel_compiler.h
taichi/compilation_manager/: kernel_compilation_manager.cpp
taichi/inc/: archs.inc.h
taichi/ir/: frontend_ir.cpp  frontend_ir.h
taichi/program/: callable.cpp  compile_config.cpp  compile_config.h  extension.cpp  kernel.cpp  kernel.h  kernel_profiler.cpp  program.cpp  program.h  snode_registry.cpp
taichi/python/: export_lang.cpp
taichi/rhi/: arch.cpp
taichi/runtime/program_impls/cuda_c/: CMakeLists.txt  cuda_c_program.cpp  cuda_c_program.h
taichi/transforms/: compile_to_offloads.cpp  make_mesh_block_local.cpp
tests/cuda_c/: test_0d.py  test_1d.py  test_2d.py  test_add_mul.py  test_extshape.py  test_func.py  test_loop.py  test_prim.py  test_print.py  test_vector.py
(+7 files in other folders)
